# python-wagoplc

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.html  README.md  TODO.md  contributing.html  controller.yaml  development.html  genindex.html  index.html  internals.html  objects.inv  plc_prg.py  py-modindex.html  pyproject.toml  reference.html  roadmap.html  search.html  searchindex.js  user-guide.html
.doctrees/: README.doctree  contributing.doctree  development.doctree  environment.pickle  index.doctree  internals.doctree  reference.doctree  roadmap.doctree  user-guide.doctree
.doctrees/examples/: discussion.doctree
.github/workflows/: README.md  build-package.md  build-package.yml  create-github-release.md  create-github-release.yml  generate-lazydocs.md  generate-lazydocs.yml  sphinx.yml  start-release-branch.md  start-release-branch.yml
_sources/: README.md.txt  contributing.md.txt  development.md.txt  internals.md.txt  reference.rst.txt  roadmap.md.txt  user-guide.md.txt
docs/: README.md  _config.yml  conf.py  contributing.md  development.md  index.md  internals.md  requirements.txt  roadmap.md  user-guide.md  work_schedule.drawio
docs/api/: .pages  (+12 more)
example/: 01_plc_prg.py  02_experiment_daemon.py  03_plc_prg_as_library.py  04_class_based.py  05_typing.py  06_read_write.py  07_iomapping.py
examples/: discussion.html
plc-application/: ampelschaltung.py  controller.yaml  fb.py  light.py  main.py  plc_prg.py  torsteuerung.py  ventilator.py
tests/: test_cc100.py  test_config.py  test_controller.py  test_plc.py  test_tasks.py
(+30 files in other folders)
