[project]
name = "wagoplc"
version = "0.1.0"
description = "Python library to interact with WAGO PLCs using Python."
readme = "README.md"
authors = [
    { name = "Andre Alexander Bell", email = "andre.bell@wago.com" },
    { name = "Maik Rehburg", email = "maik.rehburg@wago.com" },
    { name = "Johann Timm" },
    { name = "Kilian Romberg" }
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.3",
    "schema>=0.7.8",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyfakefs>=5.10.2",
    "ruff>=0.15.10",
]

[tool.ruff]
target-version = "py312"
exclude = [
"docs", "plc-application"
]
per-file-ignores = {"test_tasks.py" = ["F841"],"wagoplc/__init__.py" = ["F401"]}

